--- a/style.css
+++ b/style.css
@@ -13,13 +13,16 @@
   padding: 0;
 }
 
-body {
-  font-size: 1.6rem;
-  background-color: var(--bg-white);
+html {
+  scroll-behavior: smooth;
+  min-height: 100vh;
 }
 
-main {
-  padding: 1rem 1rem;
+body {
+  font-size: 1.6rem;
+  font-family: roboto, Arial, sans-serif;
+  background-color: var(--bg-white);
+  color: white;
 }
 
 /* header */
@@ -28,13 +31,15 @@ header {
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  background: var(--bg-gray);
-  padding: 1rem 1rem;
+  background: url("https://img.freepik.com/free-vector/comic-abstract-blue-background_225004-669.jpg?w=1060&t=st=1688810817~exp=1688811417~hmac=21b9e27c7762c0d7f5b8749ff54085bcd44f2a7c47abde8c84b47e11fae78888")
+    no-repeat center / cover;
+  background-attachment: fixed;
 }
 
 header .logo {
   aspect-ratio: 1/1;
   width: 4rem;
+  padding: 0.5rem;
 }
 
 header .logo img {
@@ -48,22 +53,66 @@ header nav {
   justify-content: space-around;
   gap: 5rem;
   margin: auto 2rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 header nav a {
   text-decoration: none;
-  color: var(--main-yellow);
-  font-weight: bold;
+  color: white;
+  font-family: "Changa One", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 /* main */
+main {
+  background: url("https://img.freepik.com/free-vector/comic-abstract-blue-background_225004-669.jpg?w=1060&t=st=1688810817~exp=1688811417~hmac=21b9e27c7762c0d7f5b8749ff54085bcd44f2a7c47abde8c84b47e11fae78888")
+    no-repeat center / cover;
+  background-attachment: fixed;
+}
+
 .hero {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
+  background: url("hero.jpeg") no-repeat center / cover;
+}
+
+h1 {
+  font-family: "Changa One", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+  font-size: 4rem;
+  color: white;
+  letter-spacing: 5px;
+  text-shadow: 2px 3px 0 black;
+}
+h2 {
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  text-transform: uppercase;
+  font-size: 2rem;
+  text-decoration: wavy;
+}
+
+.hero-text {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: url("hero.jpeg") no-repeat center / cover;
+  width: 100%;
+  height: 100%;
   backdrop-filter: blur(0.5rem);
+}
+
+.hero-text p {
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 1rem;
+  padding: 1rem;
+  border-radius: 10px;
+  color: whitesmoke;
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  margin-top: 2rem;
+}
+
+section {
+  margin: 2rem 2rem 0 2rem;
 }
