--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: roboto, Arial, sans-serif;
+  font-family: "Comic Sans MS", Arial, Helvetica, cursive;
   background-color: var(--bg-white);
   color: white;
 }
@@ -37,12 +37,14 @@ header {
 }
 
 header .logo {
-  aspect-ratio: 1/1;
-  width: 4rem;
   padding: 0.5rem;
+  width: 4rem;
 }
 
 header .logo img {
+  border-radius: 50%;
+  box-shadow: 4px 4px black;
+  border: 2px solid yellow;
   width: 100%;
 }
 
@@ -86,11 +88,17 @@ h1 {
   text-shadow: 2px 3px 0 black;
 }
 h2 {
-  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
   text-transform: uppercase;
   font-size: 2rem;
   text-decoration: wavy;
+  background-color: var(--main-yellow);
+  /* display: inline; */
+  padding: 0.5rem 0.5rem;
+  border-radius: 1rem;
+  box-shadow: 4px 4px black;
+  color: black;
+  margin: 1rem 0 0.5 0;
+  width: max-content;
 }
 
 .hero-text {
@@ -109,10 +117,35 @@ h2 {
   padding: 1rem;
   border-radius: 10px;
   color: whitesmoke;
-  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  font-family: "Comic Sans MS", Arial, Helvetica, cursive;
   margin-top: 2rem;
 }
 
 section {
   margin: 2rem 2rem 0 2rem;
+}
+
+/* form */
+
+form {
+  font-family: "Comic Sans MS", cursive;
+  background-color: #1a9ae4;
+  color: black;
+  padding: 20px;
+  border: 4px solid black;
+  border-radius: 1rem;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px;
+  margin: 8px 0;
 }
