--- a/style.css
+++ b/style.css
@@ -90,14 +90,14 @@ h1 {
 h2 {
   text-transform: uppercase;
   font-size: 2rem;
+  font-weight: bolder;
   text-decoration: wavy;
   background-color: var(--main-yellow);
-  /* display: inline; */
   padding: 0.5rem 0.5rem;
   border-radius: 1rem;
   box-shadow: 4px 4px black;
   color: black;
-  margin: 1rem 0 0.5 0;
+  margin: 1rem 0 0.5rem 0;
   width: max-content;
 }
 
@@ -134,9 +134,10 @@ form {
   padding: 20px;
   border: 4px solid black;
   border-radius: 1rem;
+  box-shadow: 4px 4px black;
 }
 
-input[type="text"] {
+input {
   width: 100%;
   padding: 12px;
   margin: 8px 0;
@@ -148,4 +149,5 @@ input[type="submit"] {
   color: white;
   padding: 12px;
   margin: 8px 0;
+  width: auto;
 }
