--- a/style.css
+++ b/style.css
@@ -62,14 +62,15 @@ header nav {
   font-size: 1.5rem;
 }
 
-header nav a {
+.shootLines {
   text-decoration: none;
   color: white;
   font-family: "Changa One", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-decoration: none;
 }
 
-header nav a:hover {
+.shootLines:hover {
   color: var(--main-yellow);
   scale: 1.1;
 }
@@ -186,6 +187,7 @@ form {
   /* border: 4px solid black; */
   border-radius: 1rem;
   box-shadow: 4px 4px black;
+  margin: 2rem auto;
 }
 
 input {
