--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body {
   font-family: "Comic Sans MS", Arial, Helvetica, cursive;
   background-color: var(--bg-white);
   color: black;
+  background: url("https://img.freepik.com/free-vector/comic-abstract-blue-background_225004-669.jpg")
+    no-repeat center / cover;
+  background-attachment: fixed;
 }
 
 /* header */
@@ -31,14 +34,18 @@ header {
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  background: url("https://img.freepik.com/free-vector/comic-abstract-blue-background_225004-669.jpg?w=1060&t=st=1688810817~exp=1688811417~hmac=21b9e27c7762c0d7f5b8749ff54085bcd44f2a7c47abde8c84b47e11fae78888")
-    no-repeat center / cover;
+  /* background: url("https://img.freepik.com/free-vector/comic-abstract-blue-background_225004-669.jpg?w=1060&t=st=1688810817~exp=1688811417~hmac=21b9e27c7762c0d7f5b8749ff54085bcd44f2a7c47abde8c84b47e11fae78888")
+    no-repeat center / cover; */
   background-attachment: fixed;
+  backdrop-filter: blur(10px);
+  padding: 1rem 0;
+  padding-left: 1.5rem;
 }
 
 header .logo {
-  padding: 0.5rem;
+  padding: 0.2rem;
   width: 4rem;
+  margin-left: 3rem;
 }
 
 header .logo:hover {
@@ -77,17 +84,19 @@ header nav {
 
 /* main */
 main {
-  background: url("https://img.freepik.com/free-vector/comic-abstract-blue-background_225004-669.jpg?w=1060&t=st=1688810817~exp=1688811417~hmac=21b9e27c7762c0d7f5b8749ff54085bcd44f2a7c47abde8c84b47e11fae78888")
+  /* background: url("https://img.freepik.com/free-vector/comic-abstract-blue-background_225004-669.jpg?w=1060&t=st=1688810817~exp=1688811417~hmac=21b9e27c7762c0d7f5b8749ff54085bcd44f2a7c47abde8c84b47e11fae78888")
     no-repeat center / cover;
-  background-attachment: scroll;
+  background-attachment: scroll; */
   padding: 0 0 1rem 0;
 }
 
 /* hero */
 .hero {
   width: 100%;
-  height: 80vh;
-  background: url("hero.jpeg") no-repeat center / cover;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("hero.jpeg") no-repeat center / cover;
+  background-attachment: fixed;
 }
 
 h1 {
@@ -181,7 +190,17 @@ h2 {
 
 form {
   font-family: "Comic Sans MS", cursive;
-  background: radial-gradient(circle, palegreen, 30%, yellowgreen);
+  background: radial-gradient(
+    circle,
+    #ff6448 0%,
+    #ff6448 25%,
+    #ff7c48 25%,
+    #ff7c48 50%,
+    #ff9448 50%,
+    #ff9448 75%,
+    #ff9448 75%,
+    #ff9448 100%
+  );
   color: black;
   padding: 1.5rem;
   /* border: 4px solid black; */
@@ -229,16 +248,36 @@ input[type="submit"]:hover {
 
 /* footer */
 footer {
-  background: radial-gradient(circle, yellow 50%, orange);
+  background: radial-gradient(
+    circle,
+    #ffff00 0%,
+    #ffff00 15%,
+    #ffea00 16%,
+    #ffea00 35%,
+    #ffd300 36%,
+    #ffd300 49%,
+    #ffc107 50%,
+    #ffc107 65%,
+    #ffa500 66%,
+    #ffa500 79%,
+    #ff8c00 80%,
+    #ff8c00 100%
+  );
   color: black;
   text-shadow: 1px 1px 0 white;
-  padding: 20px;
+  padding: 1rem;
+  font-size: 1rem;
 }
 
 .footer_container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  margin-left: 1.5rem;
+}
+
+footer h3 {
+  margin-left: 0.5rem;
 }
 
 .footer_container table {
@@ -246,5 +285,5 @@ footer {
 }
 
 .footer_container table td {
-  padding: 0 1rem;
+  padding: 0 0.5rem;
 }
