--- a/Task_1/style.css
+++ b/Task_1/style.css
@@ -119,7 +119,17 @@ h1 {
 }
 
 .hero-text p {
-  background: radial-gradient(circle, lightcoral 10%, tomato);
+  background: radial-gradient(
+    circle,
+    #ff6448 0%,
+    #ff6448 25%,
+    #ff7c48 25%,
+    #ff7c48 50%,
+    #ff9448 50%,
+    #ff9448 75%,
+    #ff9448 75%,
+    #ff9448 100%
+  );
   color: black;
   text-shadow: 1px 1px 0 white;
   box-shadow: 4px 4px black;
@@ -190,17 +200,18 @@ h2 {
 
 form {
   font-family: "Comic Sans MS", cursive;
-  background: radial-gradient(
-    circle,
-    #ff6448 0%,
-    #ff6448 25%,
-    #ff7c48 25%,
-    #ff7c48 50%,
-    #ff9448 50%,
-    #ff9448 75%,
-    #ff9448 75%,
-    #ff9448 100%
-  );
+  background: url("data:image/svg+xml,%3Csvg width='500' height='500' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%23f95757' fill-opacity='0.37' fill-rule='evenodd'/%3E%3C/svg%3E"),
+    radial-gradient(
+      circle,
+      #ff6448 0%,
+      #ff6448 25%,
+      #ff7c48 25%,
+      #ff7c48 50%,
+      #ff9448 50%,
+      #ff9448 75%,
+      #ff9448 75%,
+      #ff9448 100%
+    );
   color: black;
   padding: 1.5rem;
   /* border: 4px solid black; */
@@ -248,21 +259,22 @@ input[type="submit"]:hover {
 
 /* footer */
 footer {
-  background: radial-gradient(
-    circle,
-    #ffff00 0%,
-    #ffff00 15%,
-    #ffea00 16%,
-    #ffea00 35%,
-    #ffd300 36%,
-    #ffd300 49%,
-    #ffc107 50%,
-    #ffc107 65%,
-    #ffa500 66%,
-    #ffa500 79%,
-    #ff8c00 80%,
-    #ff8c00 100%
-  );
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='800' viewBox='0 0 80 80'%3E%3Cg fill='%23ac9292' fill-opacity='0.3'%3E%3Cpath fill-rule='evenodd' d='M11 0l5 20H6l5-20zm42 31a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM0 72h40v4H0v-4zm0-8h31v4H0v-4zm20-16h20v4H20v-4zM0 56h40v4H0v-4zm63-25a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM53 41a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-30 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-28-8a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zM56 5a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zm-3 46a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM21 0l5 20H16l5-20zm43 64v-4h-4v4h-4v4h4v4h4v-4h4v-4h-4zM36 13h4v4h-4v-4zm4 4h4v4h-4v-4zm-4 4h4v4h-4v-4zm8-8h4v4h-4v-4z'/%3E%3C/g%3E%3C/svg%3E"),
+    radial-gradient(
+      circle,
+      #ffff00 0%,
+      #ffff00 15%,
+      #ffea00 16%,
+      #ffea00 35%,
+      #ffd300 36%,
+      #ffd300 49%,
+      #ffc107 50%,
+      #ffc107 65%,
+      #ffa500 66%,
+      #ffa500 79%,
+      #ff8c00 80%,
+      #ff8c00 100%
+    );
   color: black;
   text-shadow: 1px 1px 0 white;
   padding: 1rem;
