--- a/Task_1/style.css
+++ b/Task_1/style.css
@@ -303,8 +303,8 @@ footer {
       #ff8c00 80%,
       #ff8c00 100%
     );
-  color: black;
-  text-shadow: 1px 1px 0 white;
+  color: white;
+  text-shadow: 1px 1px 0 black;
   padding: 1rem;
   font-size: 1rem;
 }
@@ -314,6 +314,10 @@ footer {
   flex-direction: column;
   align-items: flex-start;
   margin-left: 1.5rem;
+  width: fit-content;
+  border-radius: 3rem;
+  padding: 1%;
+  backdrop-filter: blur(10px) brightness(0.8) saturate(0.7);
 }
 
 footer h3 {
